# jira-integration-wrapper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: create_issue.py  link_to_epic.py
src/jira_integration_wrapper/: __init__.py  client.py  config.py  exceptions.py
tests/: __init__.py  test_client.py  test_config.py  test_version.py
